# robot-commander

./: .gitignore  LICENSE  README.md  examples.py  experiment.py  libraries.repos  library_vendor_manual_setup.sh  library_vendor_setup.sh  package.xml  requesting.py  requesting_experiments.py  robot_commander.py  robot_commander_agent_server.py  setup.cfg  setup.py  setup.sh  simple_agent_server.py  voice_control.py  voice_robot_control.py  voice_robot_control_experiments.py
ai_interface/: __init__.py  llm_interface.py  openai_interface.py  stt_interface.py  tts_interface.py
commander/: __init__.py  agent.py  requestor.py
examples/: voice_robot_control_experiments.py
grammars/: posestamped.gbnf  posestamped.json
launch/: agents.launch.py
library_vendor/: .gitignore  libraries.repos
library_vendor/bark_cpp/: CMakeLists.txt  package.xml
library_vendor/input/: CMakeLists.txt
library_vendor/input/include/input/: Dualsense.h  GamepadNode.h
library_vendor/input/lib/: .gitignore
library_vendor/input/src/: Dualsense.cpp  GamepadBase.cpp  GamepadNode.cpp  gamepad_node.cpp
library_vendor/llama_cpp/: CMakeLists.txt  package.xml
library_vendor/robot_commander_library/examples/: requesting_experiments.py  robot_commander.py  robot_commander_agent_server.py  simple_agent_server.py  voice_robot_control_experiments.py
library_vendor/robot_commander_library/src/robot_commander_library/: __init__.py
library_vendor/robot_commander_library/src/robot_commander_library/ai_interface/: llm_interface.py  stt_interface.py  tts_interface.py
library_vendor/robot_commander_library/src/robot_commander_library/commander/: __init__.py  agent.py
library_vendor/robot_commander_library/src/robot_commander_library/utils/: __init__.py  system_prompt.py
library_vendor/whisper_cpp/: package.xml
library_vendor/whisper_cpp_vendored/: CMakeLists.txt
library_vendor_cpp/: .gitignore  CMakeLists.txt  libraries.repos  package.xml
library_vendor_cpp/input/: CMakeLists.txt  libraries.repos  package.xml
library_vendor_cpp/input/include/input/: DualsenseCtlWrapper.h  GamepadBase.h  GamepadNode.h
library_vendor_cpp/input/lib/: CMakeLists.txt
library_vendor_cpp/input/src/: DualsenseCtlWrapper.cpp  GamepadBase.cpp  GamepadNode.cpp  gamepad_node.cpp
library_vendor_py/: libraries.repos  package.xml  setup.cfg  setup.py
library_vendor_py/robot_commander_library/: setup.py
library_vendor_py/robot_commander_library/src/robot_commander_library/: __init__.py
library_vendor_py/robot_commander_library/src/robot_commander_library/ai_interface/: llm_interface.py  stt_interface.py  tts_interface.py
library_vendor_py/robot_commander_library/src/robot_commander_library/commander/: __init__.py  agent.py
library_vendor_py/robot_commander_library/src/robot_commander_library/utils/: __init__.py  requestor.py
libs/: .gitignore
messages/: pose.txt  posestamped.json  posestamped.txt  twist.txt
messages/contexts/: posestamped.json  posestamped.txt
messages/other/: pose.json  pose.txt  string.json  string.txt  twist.txt
params/: agent_params.yaml  commander_params.yaml
prompts/: robot-chat.txt  ros-publisher.txt
robot-commander/: setup.py  setup.sh
robot-commander/ai_interface/: __init__.py  llm_interface.py  stt_interface.py  tts_interface.py
robot-commander/commander/: agent.py
robot_commander/: __init__.py  agent_node.py  chat_commander_action_server.py  commander_action_server_interface.py  goal_commander_action_server.py
robot_commander/lib/: setup.py
robot_commander/lib/ai_interface/: llm_interface.py  openai_interface.py  stt_interface.py  tts_interface.py
robot_commander/lib/utils/: system_prompt.py
robot_commander_cpp/: CMakeLists.txt  package.xml
robot_commander_cpp/include/robot_commander_cpp/nodes/: MessageContextNode.hpp
robot_commander_cpp/src/: MessageContextNode.cpp  message_context_node.cpp
robot_commander_cpp/test/: CMakeLists.txt  messageContextTests.cpp
robot_commander_interfaces/: CMakeLists.txt  package.xml
robot_commander_interfaces/action/: Respond.action
robot_commander_interfaces/msg/: PoseStampedKeyword.msg  PoseStampedKeywordArray.msg  State.msg
robot_commander_interfaces/srv/: UpdateContext.srv
robot_commander_py/: package.xml  setup.cfg  setup.py
robot_commander_py/examples/: requesting_experiments.py  robot_commander.py  robot_commander_agent_server.py  simple_agent_server.py  voice_prompted_image.py  voice_robot_control_experiments.py
robot_commander_py/launch/: agents.launch.py  commanders.launch.py
robot_commander_py/messages/: posestamped.json
robot_commander_py/messages/other/: twist.json
robot_commander_py/params/: agent_params.yaml  commander_params.yaml
robot_commander_py/prompts/: robot-chat.txt  ros-publisher.txt
robot_commander_py/robot_commander/: __init__.py  agent_node.py  chat_commander_action_server.py  commander_action_client.py  commander_action_server_interface.py  goal_commander_action_server.py
robot_commander_py/robot_commander/lib/: libraries.repos  setup.py  setup.sh
robot_commander_py/robot_commander/lib/ai_interface/: llm_interface.py  stt_interface.py  tts_interface.py
robot_commander_py/robot_commander/lib/commander/: agent.py
robot_commander_py/robot_commander/lib/libs/: .gitignore
robot_commander_py/robot_commander/lib/src/robot_commander_library/ai_interface/: llm_interface.py  openai_interface.py  stt_interface.py
robot_commander_py/robot_commander/lib/src/robot_commander_library/utils/: recorder.py  system_prompt.py
robot_commander_py/robot_commander/lib/utils/: __init__.py
robot_commander_py/robot_commander_py/: __init__.py  agent_node.py  chat_commander_action_server.py  commander_action_client.py  commander_action_server_interface.py  goal_commander_action_server.py
robot_commander_py/robot_commander_py/lib/: libraries.repos  setup.py
robot_commander_py/robot_commander_py/lib/src/robot_commander_library/ai_interface/: __init__.py  tts_interface.py
tools/: install_cuda.sh
utils/: __init__.py  recorder.py  requestor.py  system_prompt.py  utils.py
(+3 files in other folders)
