<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bark_cpp_vendored</name>
  <version>0.0.1</version>
  <description>Package vendor for bark.cpp.</description>

  <author email="tomas.horelican@vut.cz">Tomas Horelican</author>
  <maintainer email="tomas.horelican@vut.cz">Tomas Horelican</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
